--- a/Content/Mystyles.css
+++ b/Content/Mystyles.css
@@ -1,6 +1,6 @@
 ﻿
 body{
-    background-color: dimgray;
+    background-color: white;
 }
 
 nav ul {
@@ -60,8 +60,8 @@ h3 {
     margin-bottom: 10px;
 }
 
-p {
-    margin-left: 70px;
+.BIO {
+    margin-left: 150px;
 }
 
 button {
@@ -127,26 +127,12 @@ th, td {
     background-color: #f8f9fa;
 }
 
-.BioImage {
-    overflow: hidden auto;
-    float: left;
-    
-}
-
-.Biography {
-    border: 2px solid green; /* Adds a green border like in the example */
-    padding: 10px;
-    display: flex;
-    align-content: center; /* Aligns text and image */
-}
-
-
-
 img {
     width:100px;
     height:100px;
     object-fit: cover; /* Better fit */
     transition: transform 0.3s ease-in-out;
+    margin-bottom: 1000px;
 }
 
     /* Image Flip Effect */
@@ -154,17 +140,25 @@ img:hover {
         transform: scaleX(-1); /* Flip horizontally */
  }
 
-.Hobbies {
-    border: 2px solid green; /* Adds a green border like in the example */
-    padding: 10px;
-    display: flex;
-    align-items: center; /* Aligns text and image */
+
+div.Hobbies img {
+    float: right;
+    margin-left: 15px;
+    margin-bottom: 15px;
 }
 
-.HobbyIMG {
-    width: 100px; /* Adjust image size */
-    height: auto;
-    margin-left: 15px; /* Creates space between text and image */
+div.Hobbies {
+    overflow:hidden;
+}
+
+div.Biography img {
+    float: left;
+    margin-left: 15px;
+    margin-bottom: 15px;
+}
+
+div.Biography {
+    overflow: hidden;
 }
 
 
