--- a/Views/People/StudyGroupView.cshtml
+++ b/Views/People/StudyGroupView.cshtml
@@ -6,7 +6,7 @@
 
 <h2>StudyGroupView</h2>
 
-<table class="StudentTable">
+<table class="StudentTable" style="width:80%;">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.StudentNumber)
