--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <li><a href="~/HTML/Boitshoko.html" class="dropdown-item">Boitshoko</a></li>
                             <li><a href="~/HTML/Gundo.html" class="dropdown-item">Gundo</a></li>
                             <li><a href="~/HTML/Msizi.html" class="dropdown-item">Msizi</a></li>
-                            <li><a href="~/HTML/Oritonda.html" class="dropdown-item">Nhlanhla</a></li>
+                            <li><a href="~/HTML/Nhlanhla.html" class="dropdown-item">Nhlanhla</a></li>
                             <li><a href="~/HTML/Ritshidze.html" class="dropdown-item">Ritshidze</a></li>
                         </ul>
                     </li>
