--- a/Content/Mystyles.css
+++ b/Content/Mystyles.css
@@ -1,6 +1,6 @@
 ﻿
 body{
-    background-color: green;
+    background-color: papayawhip;
 }
 
 nav ul {
@@ -174,6 +174,9 @@ div#Biography {
     border: 1px solid darkgrey;
     border-radius: 5px;
     box-shadow: 2px grey;
+}
+.HobbyIMG{
+    float:right;
 }
 
 
